--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
     "version": 2,
-    "builds": [{"src": "/server/routes/admin.js", "use": "@vercel/node"}],
-    "routes": [{"src": "/(.*)", "dest": "/"}]
+    "builds": [{"src": "index.js", "use": "@vercel/node"}],
+    "routes": [{"src": "/(.*)", "dest": "/server/routes/admin.js"}]
 }
