--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
-{
-    "version": 2,
-    "builds": [{"src": "index.js", "use": "@vercel/node"}],
-    "routes": [{"src": "/(.*)", "dest": "/server/routes/admin.js"}]
+{ 
+    "version": 2, 
+    "build": [
+        {
+            "src": "./app.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
+    ]
 }
