--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2, 
     "build": [
         {
-            "src": "./app.js",
+            "src": "server/app.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "server/app.js"
         }
     ]
 }
