--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
+    "mongodb": "^6.7.0",
     "mongoose": "^8.3.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
